# cs50_achat

./: .development_info  .editorconfig  .gitignore  App.js  App.tsx  Dockerfile  Makefile  README.md  app.json  babel.config.js  docker-compose.yaml  index.html  package-lock.json  package.json  storage.js  tsconfig.json  websocket.js
a_chat_api/: .env  404.html  Cargo.toml  hello.html  ngrok.yml
a_chat_api/migrations/2022-06-01-011513_rust_mysql_init/: up.sql
a_chat_api/migrations/2022-06-01-025326_rust_mysql_init/: up.sql
a_chat_api/migrations/2022-06-01-025327_rust_mysql_init/: up.sql
a_chat_api/migrations/2022-06-01-025330_rust_mysql_init/: up.sql
a_chat_api/migrations/2022-06-01-025333_rust_mysql_init/: up.sql
a_chat_api/migrations/2022-06-01-025334_rust_mysql_init/: up.sql
a_chat_api/migrations/2022-06-01-025335_rust_mysql_init/: up.sql
a_chat_api/migrations/2022-06-01-025338_rust_mysql_init/: up.sql
a_chat_api/migrations/2022-06-01-025340_rust_mysql_init/: up.sql
a_chat_api/migrations/2022-06-01-025341_rust_mysql_init/: up.sql
a_chat_api/src/: lib.rs  models.rs  schema.rs  utils.rs
assets/fonts/: expoGoogleFonts.js
in-memory-server/: ngrok.yml  package-lock.json  package.json  server.js  server_ver.js  server_ver1.js  server_ver2.js
screens/: logIn.js  signUp.js  welcome.js
screens/components/SignUp/: mailForm.js  passwordForm.js  userIdForm.js
screens/hooks/: useMailValidation.js
screens/styles/SignUp/: signUpStyles.js
src/@types/cummon/: cummon.d.ts
src/api/: api.js  api.tsx
src/constants/: api.ts  common.tsx  commonStyle.js  enum.tsx  layout.js  layout.tsx  styles.js
src/context/: authContext.tsx
src/hooks/: useIsMounted.tsx  useNavigationAChat.tsx  useTogglePasswordVisibility.tsx
src/mocks/: handlers.js  native.js
src/screens/: addFriend.tsx  addGroup.tsx  addGroupSetting.tsx  chat.tsx  chats.tsx  home.js  home.tsx  logIn.js  logIn.tsx  profile.tsx  signUp.js  signUp.tsx  welcome.js  welcome.tsx
websocket/: Cargo.toml
websocket/src/: main.rs
(+90 files in other folders)
