[package]
name = "a-chat-api"
version = "0.1.0"
edition = "2021"
authors = ["Asami Kawasaki <asami.kawasaki.08@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11"
tokio = { version = "1.9", features = ["full"] }