[package]
name = "a-chat-api"
version = "0.1.0"
edition = "2018"
authors = ["Asami Kawasaki <asami.kawasaki.08@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11"
axum = "0.5.6"
tokio = { version = "1", features = ["full"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
diesel = { version = "1.4.4", features = ["mysql"] }
dotenv = "0.15.0"
anyhow = "1.0"
paw = "1.0"
sqlx = { version = "0.5.13", features = [ "mysql", "runtime-async-std-native-tls" ] }
structopt = { version = "0.3", features = [ "paw" ] }